# cuda-matmul

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  cuda12.from-history.yml  cuda12.pkgs.txt  hello  hello.cu
.cache/clangd/index/: cuda_utils.h.45F2E8D97CE86C48.idx  main.cu.C422E07ACD1D5E80.idx  saxpy.cu.932D84AFCD5A06B0.idx  saxpy.h.9B5D5282D9BC55DB.idx
include/: cuda_utils.h  loader.h  matmul.h  saxpy.h
src/: loader.cpp  main.cu  matmul.cu  saxpy.cu
tools/: generate_test_data.cpp  test_runner.cpp
